--- a/index.html
+++ b/index.html
@@ -136,30 +136,30 @@
       </defs>
       <g id="js-meets">
         <mask id="burst-mask">
-          <g id="js-meets-burst">
-            <path d="M736.4966028492113,423.76251462960715 L760.6207535615142,417.2031432870089" opacity="1" stroke-dashoffset="25" stroke-dasharray="25" stroke="white" stroke-width="10" stroke-linecap="round"></path>
-            <path d="M720.6778496183033,509.08540074304676 L740.8473120228791,523.8567509288084" opacity="1" stroke-dashoffset="25" stroke-dasharray="25" stroke="white" stroke-width="10" stroke-linecap="round"></path>
-            <path d="M644.1068373920517,549.9156338449357 L645.1335467400647,574.8945423061696" opacity="1" stroke-dashoffset="25" stroke-dasharray="25" stroke="white" stroke-width="10" stroke-linecap="round"></path>
-            <path d="M564.4432830359082,515.5071180987846 L545.5541037948852,531.8838976234808" opacity="1" stroke-dashoffset="25" stroke-dasharray="25" stroke="white" stroke-width="10" stroke-linecap="round"></path>
-            <path d="M541.6756581022439,431.7702498543409 L517.0945726278048,427.2128123179261" opacity="1" stroke-dashoffset="25" stroke-dasharray="25" stroke="white" stroke-width="10" stroke-linecap="round"></path>
-            <path d="M592.9485029230436,361.7607988317144 L581.1856286538047,339.700998539643" opacity="1" stroke-dashoffset="25" stroke-dasharray="25" stroke="white" stroke-width="10" stroke-linecap="round"></path>
-            <path d="M679.6521971041294,358.19747680583464 L689.5652463801617,335.24684600729324" opacity="1" stroke-dashoffset="25" stroke-dasharray="25" stroke="white" stroke-width="10" stroke-linecap="round"></path>
+          <g id="js-meets-burst" transform="translate(0,10)">
+            <path d="M736.4966028492113,423.76251462960715 L770.2704138464353,414.5793947499696" opacity="1" stroke-dashoffset="35" stroke-dasharray="35" stroke="white" stroke-width="8" stroke-linecap="round"></path>
+            <path d="M720.6778496183033,509.08540074304676 L748.9150969847095,529.7652910031131" opacity="1" stroke-dashoffset="35" stroke-dasharray="35" stroke="white" stroke-width="8" stroke-linecap="round"></path>
+            <path d="M644.1068373920517,549.9156338449357 L645.5442304792698,584.886105690663" opacity="1" stroke-dashoffset="35" stroke-dasharray="35" stroke="white" stroke-width="8" stroke-linecap="round"></path>
+            <path d="M564.4432830359082,515.5071180987846 L537.9984320984761,538.4346094333594" opacity="1" stroke-dashoffset="35" stroke-dasharray="35" stroke="white" stroke-width="8" stroke-linecap="round"></path>
+            <path d="M541.6756581022439,431.7702498543409 L507.26213843802924,425.3898373033602" opacity="1" stroke-dashoffset="35" stroke-dasharray="35" stroke="white" stroke-width="8" stroke-linecap="round"></path>
+            <path d="M592.9485029230436,361.7607988317144 L576.480478946109,330.87707842281446" opacity="1" stroke-dashoffset="35" stroke-dasharray="35" stroke="white" stroke-width="8" stroke-linecap="round"></path>
+            <path d="M679.6521971041294,358.19747680583464 L693.5304660905747,326.0665936878767" opacity="1" stroke-dashoffset="35" stroke-dasharray="35" stroke="white" stroke-width="8" stroke-linecap="round"></path>
           </g>
         </mask>
         <rect width="1280" height="900" fill="url(#space-dogs-pattern)" mask="url(#meets-mask)"></rect>
         <g id="js-meets-circles">
-          <circle fill="white" stroke="none" r="54" transform="translate(501,222)" data-x="501" data-y="222"></circle>
-          <circle fill="white" stroke="none" r="74" transform="translate(768,281)" data-x="768" data-y="281"></circle>
-          <circle fill="white" stroke="none" r="52" transform="translate(767,267)" data-x="767" data-y="267"></circle>
-          <circle fill="white" stroke="none" r="75" transform="translate(669,210)" data-x="669" data-y="210"></circle>
-          <circle fill="white" stroke="none" r="71" transform="translate(593,286)" data-x="593" data-y="286"></circle>
-          <circle fill="white" stroke="none" r="87" transform="translate(531,237)" data-x="531" data-y="237"></circle>
-          <circle fill="white" stroke="none" r="54" transform="translate(583,257)" data-x="583" data-y="257"></circle>
-          <circle fill="white" stroke="none" r="93" transform="translate(566,253)" data-x="566" data-y="253"></circle>
-          <circle fill="white" stroke="none" r="64" transform="translate(644,262)" data-x="644" data-y="262"></circle>
-          <circle fill="white" stroke="none" r="96" transform="translate(706,226)" data-x="706" data-y="226"></circle>
-          <circle fill="white" stroke="none" r="57" transform="translate(697,263)" data-x="697" data-y="263"></circle>
-          <circle fill="white" stroke="none" r="89" transform="translate(762,215)" data-x="762" data-y="215"></circle>
+          <circle fill="white" stroke="none" r="87" transform="translate(547,247)" data-x="547" data-y="247"></circle>
+          <circle fill="white" stroke="none" r="61" transform="translate(527,228)" data-x="527" data-y="228"></circle>
+          <circle fill="white" stroke="none" r="71" transform="translate(761,207)" data-x="761" data-y="207"></circle>
+          <circle fill="white" stroke="none" r="78" transform="translate(612,298)" data-x="612" data-y="298"></circle>
+          <circle fill="white" stroke="none" r="67" transform="translate(569,267)" data-x="569" data-y="267"></circle>
+          <circle fill="white" stroke="none" r="68" transform="translate(516,262)" data-x="516" data-y="262"></circle>
+          <circle fill="white" stroke="none" r="69" transform="translate(729,225)" data-x="729" data-y="225"></circle>
+          <circle fill="white" stroke="none" r="79" transform="translate(543,265)" data-x="543" data-y="265"></circle>
+          <circle fill="white" stroke="none" r="97" transform="translate(772,200)" data-x="772" data-y="200"></circle>
+          <circle fill="white" stroke="none" r="56" transform="translate(517,281)" data-x="517" data-y="281"></circle>
+          <circle fill="white" stroke="none" r="64" transform="translate(643,221)" data-x="643" data-y="221"></circle>
+          <circle fill="white" stroke="none" r="96" transform="translate(514,280)" data-x="514" data-y="280"></circle>
         </g>
         <rect width="1280" height="900" fill="url(#owls-pattern)" mask="url(#burst-mask)"></rect>
         <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(23,130)">
@@ -184,7 +184,7 @@
               <mask id="right-shirt">
                 <rect id="js-right-shirt" transform="translate(500,0)" fill="white" rx="5" x="770" y="288" width="282" height="97" class="js-shirt"></rect>
               </mask>
-              <rect id="fist-mask" transform="translate(100,42.5)" fill="#FBF7E8" width="35" height="39"></rect>
+              <rect id="fist-mask" transform="translate(100,42.5)" fill="#FBF7E8" width="40" height="39"></rect>
             </g>
           </g>
           <rect width="1280" height="900" mask="url(#right-shirt)" fill="url(#blue-flowers-pattern)"></rect>
@@ -205,7 +205,7 @@
               </g>
               <rect fill-opacity="0.1" fill="#000000" x="139" y="18" width="27" height="75" rx="5" class="js-sleeve"></rect>
               <rect fill="#FFFFFF" x="143" y="17" width="27" height="80" rx="5" class="js-sleeve"></rect>
-              <rect id="fist-mask" transform="translate(100,40)" fill="#FBF7E8" width="35" height="38.5"></rect>
+              <rect id="fist-mask" transform="translate(100,40)" fill="#FBF7E8" width="40" height="38.5"></rect>
             </g>
             <mask id="left-shirt">
               <rect id="js-left-shirt" transform="translate(-500,0)" rx="5" fill="white" x="183" y="280" width="282" height="97" class="js-shirt"></rect>
@@ -304,26 +304,26 @@
       </g>
       <g id="js-svg">
         <g id="js-svg-circles" class="h-g">
-          <circle fill="white" stroke="" r="0" transform="translate(749,348)" data-x="749" data-y="348"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(589,192)" data-x="589" data-y="192"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(754,81)" data-x="754" data-y="81"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(734,337)" data-x="734" data-y="337"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(326,500)" data-x="326" data-y="500"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(936,171)" data-x="936" data-y="171"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(951,122)" data-x="951" data-y="122"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(394,519)" data-x="394" data-y="519"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(395,822)" data-x="395" data-y="822"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(466,814)" data-x="466" data-y="814"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(626,771)" data-x="626" data-y="771"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(525,51)" data-x="525" data-y="51"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(425,251)" data-x="425" data-y="251"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(568,751)" data-x="568" data-y="751"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(341,765)" data-x="341" data-y="765"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(644,409)" data-x="644" data-y="409"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(399,631)" data-x="399" data-y="631"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(336,502)" data-x="336" data-y="502"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(510,662)" data-x="510" data-y="662"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(629,523)" data-x="629" data-y="523"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(420,138)" data-x="420" data-y="138"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(802,448)" data-x="802" data-y="448"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(570,646)" data-x="570" data-y="646"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(885,198)" data-x="885" data-y="198"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(447,608)" data-x="447" data-y="608"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(602,221)" data-x="602" data-y="221"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(693,62)" data-x="693" data-y="62"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(760,602)" data-x="760" data-y="602"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(932,804)" data-x="932" data-y="804"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(631,679)" data-x="631" data-y="679"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(587,400)" data-x="587" data-y="400"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(367,299)" data-x="367" data-y="299"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(827,138)" data-x="827" data-y="138"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(653,754)" data-x="653" data-y="754"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(402,588)" data-x="402" data-y="588"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(299,544)" data-x="299" data-y="544"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(662,375)" data-x="662" data-y="375"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(390,117)" data-x="390" data-y="117"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(728,599)" data-x="728" data-y="599"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(240,396)" data-x="240" data-y="396"></circle>
         </g>
         <mask id="svg-s-mask">
           <g transform="translate(250,0)">
@@ -342,7 +342,7 @@
         <mask id="svg-g-mask">
           <g transform="translate(250,0)">
             <g id="js-svg-g-wrapper" class="svg-stroke">
-              <path id="js-svg-g" d="M539,400.572 C539,441.994 572.579,475.572 614,475.572 C655.422,475.572 689,441.994 689,400.572 M595,328 C562.778,336.412 539,365.716 539,400.572 C539,441.994 572.578,475.572 614,475.572 C655.422,475.572 689,441.994 689,400.572 L620.127,400.572" opacity="0" class="svg-letter"></path>
+              <path id="js-svg-g" d="M539,400.572 C539,441.994 572.579,475.572 614,475.572 C655.422,475.572 689,441.994 689,400.572 M595,328 C562.778,336.412 539,365.716 539,400.572 C539,441.994 572.578,475.572 614,475.572 C655.422,475.572 689,441.994 689,400.572 L620.127,400.572" opacity="0" stroke-linecap="round" class="svg-letter"></path>
             </g>
           </g>
         </mask>
