--- a/index.html
+++ b/index.html
@@ -148,18 +148,18 @@
         </mask>
         <rect width="1280" height="900" fill="url(#space-dogs-pattern)" mask="url(#meets-mask)"></rect>
         <g id="js-meets-circles">
-          <circle fill="white" stroke="none" r="87" transform="translate(547,247)" data-x="547" data-y="247"></circle>
-          <circle fill="white" stroke="none" r="61" transform="translate(527,228)" data-x="527" data-y="228"></circle>
-          <circle fill="white" stroke="none" r="71" transform="translate(761,207)" data-x="761" data-y="207"></circle>
-          <circle fill="white" stroke="none" r="78" transform="translate(612,298)" data-x="612" data-y="298"></circle>
-          <circle fill="white" stroke="none" r="67" transform="translate(569,267)" data-x="569" data-y="267"></circle>
-          <circle fill="white" stroke="none" r="68" transform="translate(516,262)" data-x="516" data-y="262"></circle>
-          <circle fill="white" stroke="none" r="69" transform="translate(729,225)" data-x="729" data-y="225"></circle>
-          <circle fill="white" stroke="none" r="79" transform="translate(543,265)" data-x="543" data-y="265"></circle>
-          <circle fill="white" stroke="none" r="97" transform="translate(772,200)" data-x="772" data-y="200"></circle>
-          <circle fill="white" stroke="none" r="56" transform="translate(517,281)" data-x="517" data-y="281"></circle>
-          <circle fill="white" stroke="none" r="64" transform="translate(643,221)" data-x="643" data-y="221"></circle>
-          <circle fill="white" stroke="none" r="96" transform="translate(514,280)" data-x="514" data-y="280"></circle>
+          <circle fill="white" stroke="none" r="61" transform="translate(557,209)" data-x="557" data-y="209"></circle>
+          <circle fill="white" stroke="none" r="95" transform="translate(773,239)" data-x="773" data-y="239"></circle>
+          <circle fill="white" stroke="none" r="82" transform="translate(572,209)" data-x="572" data-y="209"></circle>
+          <circle fill="white" stroke="none" r="60" transform="translate(586,205)" data-x="586" data-y="205"></circle>
+          <circle fill="white" stroke="none" r="100" transform="translate(697,239)" data-x="697" data-y="239"></circle>
+          <circle fill="white" stroke="none" r="67" transform="translate(738,214)" data-x="738" data-y="214"></circle>
+          <circle fill="white" stroke="none" r="51" transform="translate(656,264)" data-x="656" data-y="264"></circle>
+          <circle fill="white" stroke="none" r="90" transform="translate(779,215)" data-x="779" data-y="215"></circle>
+          <circle fill="white" stroke="none" r="92" transform="translate(613,289)" data-x="613" data-y="289"></circle>
+          <circle fill="white" stroke="none" r="96" transform="translate(633,259)" data-x="633" data-y="259"></circle>
+          <circle fill="white" stroke="none" r="61" transform="translate(593,213)" data-x="593" data-y="213"></circle>
+          <circle fill="white" stroke="none" r="57" transform="translate(717,273)" data-x="717" data-y="273"></circle>
         </g>
         <rect width="1280" height="900" fill="url(#owls-pattern)" mask="url(#burst-mask)"></rect>
         <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(23,130)">
@@ -304,26 +304,26 @@
       </g>
       <g id="js-svg">
         <g id="js-svg-circles" class="h-g">
-          <circle fill="white" stroke="" r="0" transform="translate(420,138)" data-x="420" data-y="138"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(802,448)" data-x="802" data-y="448"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(570,646)" data-x="570" data-y="646"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(885,198)" data-x="885" data-y="198"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(447,608)" data-x="447" data-y="608"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(602,221)" data-x="602" data-y="221"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(693,62)" data-x="693" data-y="62"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(760,602)" data-x="760" data-y="602"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(932,804)" data-x="932" data-y="804"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(631,679)" data-x="631" data-y="679"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(587,400)" data-x="587" data-y="400"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(367,299)" data-x="367" data-y="299"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(827,138)" data-x="827" data-y="138"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(653,754)" data-x="653" data-y="754"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(402,588)" data-x="402" data-y="588"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(299,544)" data-x="299" data-y="544"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(662,375)" data-x="662" data-y="375"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(390,117)" data-x="390" data-y="117"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(728,599)" data-x="728" data-y="599"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(240,396)" data-x="240" data-y="396"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(1017,214)" data-x="1017" data-y="214"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(528,646)" data-x="528" data-y="646"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(498,119)" data-x="498" data-y="119"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(525,185)" data-x="525" data-y="185"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(947,174)" data-x="947" data-y="174"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(1021,314)" data-x="1021" data-y="314"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(496,542)" data-x="496" data-y="542"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(356,645)" data-x="356" data-y="645"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(595,743)" data-x="595" data-y="743"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(562,625)" data-x="562" data-y="625"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(416,358)" data-x="416" data-y="358"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(264,448)" data-x="264" data-y="448"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(738,329)" data-x="738" data-y="329"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(908,847)" data-x="908" data-y="847"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(643,586)" data-x="643" data-y="586"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(731,78)" data-x="731" data-y="78"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(997,155)" data-x="997" data-y="155"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(885,270)" data-x="885" data-y="270"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(993,88)" data-x="993" data-y="88"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(411,387)" data-x="411" data-y="387"></circle>
         </g>
         <mask id="svg-s-mask">
           <g transform="translate(250,0)">
@@ -676,6 +676,12 @@
   <path id="js-wave1-top2" fill="white" d="M100,50 C100,22.3857625 77.6142375,0 50,0 C22.3857625,0 0,22.3857625 0,50 L100,50 Z M200,50 C200,22.3857625 177.614237,0 150,0 C122.385763,0 100,22.3857625 100,50 L200,50 Z M300,50 C300,22.3857625 277.614237,0 250,0 C222.385763,0 200,22.3857625 200,50 L300,50 Z M400,50 C400,22.3857625 377.614237,0 350,0 C322.385763,0 300,22.3857625 300,50 L400,50 Z M500,50 C500,22.3857625 477.614237,0 450,0 C422.385763,0 400,22.3857625 400,50 L500,50 Z M600,50 C600,22.3857625 577.614237,0 550,0 C522.385763,0 500,22.3857625 500,50 L600,50 Z M700,50 C700,22.3857625 677.614237,0 650,0 C622.385763,0 600,22.3857625 600,50 L700,50 Z M800,50 C800,22.3857625 777.614237,0 750,0 C722.385763,0 700,22.3857625 700,50 L800,50 Z M900,50 C900,22.3857625 877.614237,0 850,0 C822.385763,0 800,22.3857625 800,50 L900,50 Z M1000,50 C1000,22.3857625 977.614237,0 950,0 C922.385763,0 900,22.3857625 900,50 L1000,50 Z M1100,50 C1100,22.3857625 1077.61424,0 1050,0 C1022.38576,0 1000,22.3857625 1000,50 L1100,50 Z M1200,50 C1200,22.3857625 1177.61424,0 1150,0 C1122.38576,0 1100,22.3857625 1100,50 L1200,50 Z M1300,50 C1300,22.3857625 1277.61424,0 1250,0 C1222.38576,0 1200,22.3857625 1200,50 L1300,50 Z M1400,50 C1400,22.3857625 1377.61424,0 1350,0 C1322.38576,0 1300,22.3857625 1300,50 L1400,50 Z M1500,50 C1500,22.3857625 1477.61424,0 1450,0 C1422.38576,0 1400,22.3857625 1400,50 L1500,50 Z M1600,50 C1600,22.3857625 1577.61424,0 1550,0 C1522.38576,0 1500,22.3857625 1500,50 L1600,50 Z M1700,50 C1700,22.3857625 1677.61424,0 1650,0 C1622.38576,0 1600,22.3857625 1600,50 L1700,50 Z M1800,50 C1800,22.3857625 1777.61424,0 1750,0 C1722.38576,0 1700,22.3857625 1700,50 L1800,50 Z M1900,50 C1900,22.3857625 1877.61424,0 1850,0 C1822.38576,0 1800,22.3857625 1800,50 L1900,50 Z M2000,50 C2000,22.3857625 1977.61424,0 1950,0 C1922.38576,0 1900,22.3857625 1900,50 L2000,50 Z"></path>
   <path id="js-wave1-top" d="M100,50 C100,22.3857625 77.6142375,0 50,0 C22.3857625,0 0,22.3857625 0,50 L100,50 Z M200,50 C200,22.3857625 177.614237,0 150,0 C122.385763,0 100,22.3857625 100,50 L200,50 Z M300,50 C300,22.3857625 277.614237,0 250,0 C222.385763,0 200,22.3857625 200,50 L300,50 Z M400,50 C400,22.3857625 377.614237,0 350,0 C322.385763,0 300,22.3857625 300,50 L400,50 Z M500,50 C500,22.3857625 477.614237,0 450,0 C422.385763,0 400,22.3857625 400,50 L500,50 Z M600,50 C600,22.3857625 577.614237,0 550,0 C522.385763,0 500,22.3857625 500,50 L600,50 Z M700,50 C700,22.3857625 677.614237,0 650,0 C622.385763,0 600,22.3857625 600,50 L700,50 Z M800,50 C800,22.3857625 777.614237,0 750,0 C722.385763,0 700,22.3857625 700,50 L800,50 Z M900,50 C900,22.3857625 877.614237,0 850,0 C822.385763,0 800,22.3857625 800,50 L900,50 Z M1000,50 C1000,22.3857625 977.614237,0 950,0 C922.385763,0 900,22.3857625 900,50 L1000,50 Z M1100,50 C1100,22.3857625 1077.61424,0 1050,0 C1022.38576,0 1000,22.3857625 1000,50 L1100,50 Z M1200,50 C1200,22.3857625 1177.61424,0 1150,0 C1122.38576,0 1100,22.3857625 1100,50 L1200,50 Z M1300,50 C1300,22.3857625 1277.61424,0 1250,0 C1222.38576,0 1200,22.3857625 1200,50 L1300,50 Z M1400,50 C1400,22.3857625 1377.61424,0 1350,0 C1322.38576,0 1300,22.3857625 1300,50 L1400,50 Z M1500,50 C1500,22.3857625 1477.61424,0 1450,0 C1422.38576,0 1400,22.3857625 1400,50 L1500,50 Z M1600,50 C1600,22.3857625 1577.61424,0 1550,0 C1522.38576,0 1500,22.3857625 1500,50 L1600,50 Z M1700,50 C1700,22.3857625 1677.61424,0 1650,0 C1622.38576,0 1600,22.3857625 1600,50 L1700,50 Z M1800,50 C1800,22.3857625 1777.61424,0 1750,0 C1722.38576,0 1700,22.3857625 1700,50 L1800,50 Z M1900,50 C1900,22.3857625 1877.61424,0 1850,0 C1822.38576,0 1800,22.3857625 1800,50 L1900,50 Z M2000,50 C2000,22.3857625 1977.61424,0 1950,0 C1922.38576,0 1900,22.3857625 1900,50 L2000,50 Z"></path>
 </g>
+      <clipPath id="fish-clip">
+        <ellipse rx="50" ry="100" stroke="deeppink" fill="none" transform="translate(70,140)"></ellipse>
+      </clipPath>
+      <g id="js-fish-wrapper" clip-path="url(#fish-clip)" transform="translate(650,500)" opacity="1">
+        <path id="js-fish" transform="translate(35,240)" d="M59.9278187,38.515813 C59.9279337,38.4550751 59.9279913,38.3944075 59.9279913,38.3338109 C59.9279913,12.1648045 42.8707408,-0.0497780551 38.7878788,-1.32812056e-15 C34.7409799,0.0493395947 19.7913343,11.7554583 19.5282861,37.4452423 L19.5282861,37.4452474 C16.0411721,38.7360779 12.1171117,42.1917262 9.10415631,47.0134627 C4.30388148,54.6955083 3.63405164,62.9360918 7.60804947,65.4193213 C10.933283,67.4971578 16.4562459,64.8856199 20.9831194,59.477067 C23.0523849,75.7361504 27.1759085,92.0451977 32.3945142,99.5885516 C32.3901186,99.6330689 32.3856972,99.677584 32.3812496,99.7220964 C31.5257192,108.284278 27.8787879,117.342994 27.8787879,119.672897 C27.8787879,125.376399 32.4916117,130 38.1818182,130 C43.8720247,130 48.4848485,125.376399 48.4848485,119.672897 C48.4848485,117.23407 45.3222135,109.056852 44.5860421,99.993265 C44.5841268,99.9696844 44.5822183,99.9460991 44.5803165,99.9225092 L44.5803165,99.9225092 C50.3329814,92.5644475 55.4518905,76.1115391 58.0742357,59.6737709 C62.7354524,65.7652941 68.7364831,68.8385802 72.2641096,66.6342746 C76.2381075,64.1510451 75.5682776,55.9104615 70.7680028,48.228416 C67.634592,43.2139105 63.5157695,39.6769068 59.9278187,38.515813 Z" fill="#6C84D4"></path>
+      </g>
     </svg>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/velocity/jquery.velocity.min.js"></script>
@@ -687,6 +693,7 @@
     <script src="js/svg.js"></script>
     <script src="js/meets.js"></script>
     <script src="js/logo.js"></script>
+    <script src="js/fish.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
