--- a/index.html
+++ b/index.html
@@ -148,18 +148,18 @@
         </mask>
         <rect width="1280" height="900" fill="url(#space-dogs-pattern)" mask="url(#meets-mask)"></rect>
         <g id="js-meets-circles">
-          <circle fill="white" stroke="none" r="75" transform="translate(522,277)" data-x="522" data-y="277"></circle>
-          <circle fill="white" stroke="none" r="96" transform="translate(541,248)" data-x="541" data-y="248"></circle>
-          <circle fill="white" stroke="none" r="72" transform="translate(637,229)" data-x="637" data-y="229"></circle>
-          <circle fill="white" stroke="none" r="64" transform="translate(761,253)" data-x="761" data-y="253"></circle>
-          <circle fill="white" stroke="none" r="93" transform="translate(539,201)" data-x="539" data-y="201"></circle>
-          <circle fill="white" stroke="none" r="90" transform="translate(569,253)" data-x="569" data-y="253"></circle>
-          <circle fill="white" stroke="none" r="98" transform="translate(760,258)" data-x="760" data-y="258"></circle>
-          <circle fill="white" stroke="none" r="73" transform="translate(735,266)" data-x="735" data-y="266"></circle>
-          <circle fill="white" stroke="none" r="50" transform="translate(649,235)" data-x="649" data-y="235"></circle>
-          <circle fill="white" stroke="none" r="99" transform="translate(740,277)" data-x="740" data-y="277"></circle>
-          <circle fill="white" stroke="none" r="54" transform="translate(653,226)" data-x="653" data-y="226"></circle>
-          <circle fill="white" stroke="none" r="75" transform="translate(568,279)" data-x="568" data-y="279"></circle>
+          <circle fill="white" stroke="none" r="57" transform="translate(616,256)" data-x="616" data-y="256"></circle>
+          <circle fill="white" stroke="none" r="69" transform="translate(513,239)" data-x="513" data-y="239"></circle>
+          <circle fill="white" stroke="none" r="66" transform="translate(747,297)" data-x="747" data-y="297"></circle>
+          <circle fill="white" stroke="none" r="97" transform="translate(772,242)" data-x="772" data-y="242"></circle>
+          <circle fill="white" stroke="none" r="78" transform="translate(597,280)" data-x="597" data-y="280"></circle>
+          <circle fill="white" stroke="none" r="99" transform="translate(539,287)" data-x="539" data-y="287"></circle>
+          <circle fill="white" stroke="none" r="66" transform="translate(620,275)" data-x="620" data-y="275"></circle>
+          <circle fill="white" stroke="none" r="77" transform="translate(598,295)" data-x="598" data-y="295"></circle>
+          <circle fill="white" stroke="none" r="51" transform="translate(678,210)" data-x="678" data-y="210"></circle>
+          <circle fill="white" stroke="none" r="77" transform="translate(740,300)" data-x="740" data-y="300"></circle>
+          <circle fill="white" stroke="none" r="89" transform="translate(546,272)" data-x="546" data-y="272"></circle>
+          <circle fill="white" stroke="none" r="50" transform="translate(596,264)" data-x="596" data-y="264"></circle>
         </g>
         <rect width="1280" height="900" fill="url(#owls-pattern)" mask="url(#burst-mask)"></rect>
         <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(23,130)">
@@ -304,26 +304,26 @@
       </g>
       <g id="js-svg">
         <g id="js-svg-circles" class="h-g">
-          <circle fill="white" stroke="" r="0" transform="translate(809,692)" data-x="809" data-y="692"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(511,125)" data-x="511" data-y="125"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(465,718)" data-x="465" data-y="718"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(1012,827)" data-x="1012" data-y="827"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(998,581)" data-x="998" data-y="581"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(1018,711)" data-x="1018" data-y="711"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(713,624)" data-x="713" data-y="624"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(882,86)" data-x="882" data-y="86"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(837,257)" data-x="837" data-y="257"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(904,704)" data-x="904" data-y="704"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(791,477)" data-x="791" data-y="477"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(687,190)" data-x="687" data-y="190"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(761,572)" data-x="761" data-y="572"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(436,264)" data-x="436" data-y="264"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(519,662)" data-x="519" data-y="662"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(893,91)" data-x="893" data-y="91"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(393,128)" data-x="393" data-y="128"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(1028,342)" data-x="1028" data-y="342"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(708,675)" data-x="708" data-y="675"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(571,119)" data-x="571" data-y="119"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(568,458)" data-x="568" data-y="458"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(535,735)" data-x="535" data-y="735"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(728,467)" data-x="728" data-y="467"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(888,806)" data-x="888" data-y="806"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(407,251)" data-x="407" data-y="251"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(355,701)" data-x="355" data-y="701"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(848,570)" data-x="848" data-y="570"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(913,619)" data-x="913" data-y="619"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(977,742)" data-x="977" data-y="742"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(586,656)" data-x="586" data-y="656"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(615,699)" data-x="615" data-y="699"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(383,302)" data-x="383" data-y="302"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(259,101)" data-x="259" data-y="101"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(798,315)" data-x="798" data-y="315"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(1028,72)" data-x="1028" data-y="72"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(306,406)" data-x="306" data-y="406"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(631,686)" data-x="631" data-y="686"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(514,100)" data-x="514" data-y="100"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(583,736)" data-x="583" data-y="736"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(683,846)" data-x="683" data-y="846"></circle>
         </g>
         <mask id="svg-s-mask">
           <g transform="translate(250,0)">
@@ -640,7 +640,7 @@
 
   <a href="http://velocityjs.org/" xlink:href="http://velocityjs.org/" title="VelocityJS project">
   <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" >
-    <g id="Group" transform="translate(21.000000, 21.000000)">
+    <g id="js-logo-v" transform="translate(21.000000, 21.000000)">
         <g id="js-logo-lines" opacity="0">
           <path id="js-line-1" d="M80.2079974,126.601444 L17.7158203,182.466797" id="Path-51" stroke="url(#linearGradient-11)" stroke-width="42" stroke-linecap="round"></path>
           <path id="js-line-2" d="M159.267795,244.777344 L84.0530574,101.681857" id="Path-50" stroke="url(#linearGradient-21)" stroke-width="42" stroke-linecap="round"></path>
