add fish shadow

--- a/index.html
+++ b/index.html
@@ -148,18 +148,18 @@
         </mask>
         <rect width="1280" height="900" fill="url(#space-dogs-pattern)" mask="url(#meets-mask)"></rect>
         <g id="js-meets-circles">
-          <circle fill="white" stroke="none" r="54" transform="translate(662,211)" data-x="662" data-y="211"></circle>
-          <circle fill="white" stroke="none" r="89" transform="translate(689,200)" data-x="689" data-y="200"></circle>
-          <circle fill="white" stroke="none" r="55" transform="translate(551,273)" data-x="551" data-y="273"></circle>
-          <circle fill="white" stroke="none" r="85" transform="translate(608,200)" data-x="608" data-y="200"></circle>
-          <circle fill="white" stroke="none" r="68" transform="translate(757,262)" data-x="757" data-y="262"></circle>
-          <circle fill="white" stroke="none" r="95" transform="translate(593,223)" data-x="593" data-y="223"></circle>
-          <circle fill="white" stroke="none" r="57" transform="translate(674,213)" data-x="674" data-y="213"></circle>
-          <circle fill="white" stroke="none" r="53" transform="translate(552,239)" data-x="552" data-y="239"></circle>
-          <circle fill="white" stroke="none" r="76" transform="translate(608,287)" data-x="608" data-y="287"></circle>
-          <circle fill="white" stroke="none" r="63" transform="translate(558,214)" data-x="558" data-y="214"></circle>
-          <circle fill="white" stroke="none" r="66" transform="translate(640,264)" data-x="640" data-y="264"></circle>
-          <circle fill="white" stroke="none" r="61" transform="translate(768,238)" data-x="768" data-y="238"></circle>
+          <circle fill="white" stroke="none" r="83" transform="translate(741,286)" data-x="741" data-y="286"></circle>
+          <circle fill="white" stroke="none" r="70" transform="translate(693,235)" data-x="693" data-y="235"></circle>
+          <circle fill="white" stroke="none" r="69" transform="translate(716,227)" data-x="716" data-y="227"></circle>
+          <circle fill="white" stroke="none" r="56" transform="translate(644,248)" data-x="644" data-y="248"></circle>
+          <circle fill="white" stroke="none" r="66" transform="translate(617,279)" data-x="617" data-y="279"></circle>
+          <circle fill="white" stroke="none" r="68" transform="translate(523,209)" data-x="523" data-y="209"></circle>
+          <circle fill="white" stroke="none" r="50" transform="translate(769,264)" data-x="769" data-y="264"></circle>
+          <circle fill="white" stroke="none" r="72" transform="translate(610,203)" data-x="610" data-y="203"></circle>
+          <circle fill="white" stroke="none" r="66" transform="translate(708,272)" data-x="708" data-y="272"></circle>
+          <circle fill="white" stroke="none" r="74" transform="translate(675,294)" data-x="675" data-y="294"></circle>
+          <circle fill="white" stroke="none" r="99" transform="translate(542,287)" data-x="542" data-y="287"></circle>
+          <circle fill="white" stroke="none" r="53" transform="translate(692,207)" data-x="692" data-y="207"></circle>
         </g>
         <rect width="1280" height="900" fill="url(#owls-pattern)" mask="url(#burst-mask)"></rect>
         <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(23,130)">
@@ -304,26 +304,26 @@
       </g>
       <g id="js-svg">
         <g id="js-svg-circles" class="h-g">
-          <circle fill="white" stroke="" r="0" transform="translate(402,565)" data-x="402" data-y="565"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(1007,377)" data-x="1007" data-y="377"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(375,526)" data-x="375" data-y="526"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(821,827)" data-x="821" data-y="827"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(571,298)" data-x="571" data-y="298"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(1022,663)" data-x="1022" data-y="663"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(518,90)" data-x="518" data-y="90"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(649,164)" data-x="649" data-y="164"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(487,494)" data-x="487" data-y="494"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(834,235)" data-x="834" data-y="235"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(252,235)" data-x="252" data-y="235"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(532,288)" data-x="532" data-y="288"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(549,426)" data-x="549" data-y="426"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(963,580)" data-x="963" data-y="580"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(696,73)" data-x="696" data-y="73"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(626,713)" data-x="626" data-y="713"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(275,550)" data-x="275" data-y="550"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(916,451)" data-x="916" data-y="451"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(727,641)" data-x="727" data-y="641"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(299,565)" data-x="299" data-y="565"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(544,748)" data-x="544" data-y="748"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(433,338)" data-x="433" data-y="338"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(369,630)" data-x="369" data-y="630"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(342,398)" data-x="342" data-y="398"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(824,296)" data-x="824" data-y="296"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(739,119)" data-x="739" data-y="119"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(818,724)" data-x="818" data-y="724"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(261,101)" data-x="261" data-y="101"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(410,639)" data-x="410" data-y="639"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(719,361)" data-x="719" data-y="361"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(484,610)" data-x="484" data-y="610"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(761,772)" data-x="761" data-y="772"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(260,271)" data-x="260" data-y="271"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(856,645)" data-x="856" data-y="645"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(862,802)" data-x="862" data-y="802"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(420,354)" data-x="420" data-y="354"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(563,650)" data-x="563" data-y="650"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(1019,739)" data-x="1019" data-y="739"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(484,486)" data-x="484" data-y="486"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(477,171)" data-x="477" data-y="171"></circle>
         </g>
         <mask id="svg-s-mask">
           <g transform="translate(250,0)">
@@ -687,8 +687,8 @@
         <clipPath id="fish-clip">
           <rect width="100" height="250" stroke="deeppink" fill="none" transform="translate(25,140)"></rect>
         </clipPath>
-        <g transform="translate(100,50)">
-          <g id="js-fish-wrapper" clip-path="url(#fish-clip)" transform="translate(650,300)" opacity="1">
+        <g transform="rotate(-25) translate(100,50)">
+          <g id="js-fish-wrapper" clip-path="url(#fish-clip)" transform="translate(400,600)" opacity="1">
             <g id="js-top-splash2" transform="translate(70,140)">
               <circle r="0" fill="#eaeaea" opacity=".85"></circle>
               <circle r="0" fill="#eaeaea" opacity=".85"></circle>
@@ -713,9 +713,10 @@
               <circle r="0" fill="#eaeaea" opacity=".85"></circle>
               <circle r="0" fill="#eaeaea" opacity=".85"></circle>
             </g>
+            <path id="js-fish-shadow" transform="translate(45,390)" d="M59.9278187,38.515813 C59.9279337,38.4550751 59.9279913,38.3944075 59.9279913,38.3338109 C59.9279913,12.1648045 42.8707408,-0.0497780551 38.7878788,-1.32812056e-15 C34.7409799,0.0493395947 19.7913343,11.7554583 19.5282861,37.4452423 L19.5282861,37.4452474 C16.0411721,38.7360779 12.1171117,42.1917262 9.10415631,47.0134627 C4.30388148,54.6955083 3.63405164,62.9360918 7.60804947,65.4193213 C10.933283,67.4971578 16.4562459,64.8856199 20.9831194,59.477067 C23.0523849,75.7361504 27.1759085,92.0451977 32.3945142,99.5885516 C32.3901186,99.6330689 32.3856972,99.677584 32.3812496,99.7220964 C31.5257192,108.284278 27.8787879,117.342994 27.8787879,119.672897 C27.8787879,125.376399 32.4916117,130 38.1818182,130 C43.8720247,130 48.4848485,125.376399 48.4848485,119.672897 C48.4848485,117.23407 45.3222135,109.056852 44.5860421,99.993265 C44.5841268,99.9696844 44.5822183,99.9460991 44.5803165,99.9225092 L44.5803165,99.9225092 C50.3329814,92.5644475 55.4518905,76.1115391 58.0742357,59.6737709 C62.7354524,65.7652941 68.7364831,68.8385802 72.2641096,66.6342746 C76.2381075,64.1510451 75.5682776,55.9104615 70.7680028,48.228416 C67.634592,43.2139105 63.5157695,39.6769068 59.9278187,38.515813 Z" fill="#333" opacity=".2"></path>
             <path id="js-fish" transform="translate(35,390)" d="M59.9278187,38.515813 C59.9279337,38.4550751 59.9279913,38.3944075 59.9279913,38.3338109 C59.9279913,12.1648045 42.8707408,-0.0497780551 38.7878788,-1.32812056e-15 C34.7409799,0.0493395947 19.7913343,11.7554583 19.5282861,37.4452423 L19.5282861,37.4452474 C16.0411721,38.7360779 12.1171117,42.1917262 9.10415631,47.0134627 C4.30388148,54.6955083 3.63405164,62.9360918 7.60804947,65.4193213 C10.933283,67.4971578 16.4562459,64.8856199 20.9831194,59.477067 C23.0523849,75.7361504 27.1759085,92.0451977 32.3945142,99.5885516 C32.3901186,99.6330689 32.3856972,99.677584 32.3812496,99.7220964 C31.5257192,108.284278 27.8787879,117.342994 27.8787879,119.672897 C27.8787879,125.376399 32.4916117,130 38.1818182,130 C43.8720247,130 48.4848485,125.376399 48.4848485,119.672897 C48.4848485,117.23407 45.3222135,109.056852 44.5860421,99.993265 C44.5841268,99.9696844 44.5822183,99.9460991 44.5803165,99.9225092 L44.5803165,99.9225092 C50.3329814,92.5644475 55.4518905,76.1115391 58.0742357,59.6737709 C62.7354524,65.7652941 68.7364831,68.8385802 72.2641096,66.6342746 C76.2381075,64.1510451 75.5682776,55.9104615 70.7680028,48.228416 C67.634592,43.2139105 63.5157695,39.6769068 59.9278187,38.515813 Z" fill="#6C84D4"></path>
           </g>
-          <g id="js-bottom-splash1" transform="translate(720,685)">
+          <g id="js-bottom-splash1" transform="translate(470,985)">
             <circle r="0" fill="#eaeaea" opacity=".85"></circle>
             <circle r="0" fill="#eaeaea" opacity=".85"></circle>
             <circle r="0" fill="#eaeaea" opacity=".85"></circle>
@@ -732,7 +733,7 @@
             <circle r="0" fill="#eaeaea" opacity=".85"></circle>
             <circle r="0" fill="#eaeaea" opacity=".85"></circle>
           </g>
-          <g id="js-top-splash1" transform="translate(720,435)">
+          <g id="js-top-splash1" transform="translate(470,735)">
             <circle r="0" fill="#eaeaea" opacity=".85"></circle>
             <circle r="0" fill="#eaeaea" opacity=".85"></circle>
             <circle r="0" fill="#eaeaea" opacity=".85"></circle>
