--- a/index.html
+++ b/index.html
@@ -148,18 +148,18 @@
         </mask>
         <rect width="1280" height="900" fill="url(#space-dogs-pattern)" mask="url(#meets-mask)"></rect>
         <g id="js-meets-circles">
-          <circle fill="white" stroke="none" r="54" transform="translate(725,264)" data-x="725" data-y="264"></circle>
-          <circle fill="white" stroke="none" r="87" transform="translate(772,206)" data-x="772" data-y="206"></circle>
-          <circle fill="white" stroke="none" r="84" transform="translate(527,265)" data-x="527" data-y="265"></circle>
-          <circle fill="white" stroke="none" r="97" transform="translate(665,207)" data-x="665" data-y="207"></circle>
-          <circle fill="white" stroke="none" r="69" transform="translate(742,232)" data-x="742" data-y="232"></circle>
-          <circle fill="white" stroke="none" r="87" transform="translate(733,259)" data-x="733" data-y="259"></circle>
-          <circle fill="white" stroke="none" r="63" transform="translate(650,290)" data-x="650" data-y="290"></circle>
-          <circle fill="white" stroke="none" r="61" transform="translate(724,269)" data-x="724" data-y="269"></circle>
-          <circle fill="white" stroke="none" r="95" transform="translate(575,212)" data-x="575" data-y="212"></circle>
-          <circle fill="white" stroke="none" r="85" transform="translate(686,227)" data-x="686" data-y="227"></circle>
-          <circle fill="white" stroke="none" r="59" transform="translate(511,239)" data-x="511" data-y="239"></circle>
-          <circle fill="white" stroke="none" r="51" transform="translate(767,241)" data-x="767" data-y="241"></circle>
+          <circle fill="white" stroke="none" r="92" transform="translate(581,211)" data-x="581" data-y="211"></circle>
+          <circle fill="white" stroke="none" r="75" transform="translate(538,213)" data-x="538" data-y="213"></circle>
+          <circle fill="white" stroke="none" r="84" transform="translate(755,216)" data-x="755" data-y="216"></circle>
+          <circle fill="white" stroke="none" r="91" transform="translate(597,227)" data-x="597" data-y="227"></circle>
+          <circle fill="white" stroke="none" r="88" transform="translate(602,271)" data-x="602" data-y="271"></circle>
+          <circle fill="white" stroke="none" r="68" transform="translate(700,300)" data-x="700" data-y="300"></circle>
+          <circle fill="white" stroke="none" r="75" transform="translate(570,262)" data-x="570" data-y="262"></circle>
+          <circle fill="white" stroke="none" r="95" transform="translate(748,286)" data-x="748" data-y="286"></circle>
+          <circle fill="white" stroke="none" r="60" transform="translate(631,264)" data-x="631" data-y="264"></circle>
+          <circle fill="white" stroke="none" r="79" transform="translate(580,258)" data-x="580" data-y="258"></circle>
+          <circle fill="white" stroke="none" r="84" transform="translate(659,268)" data-x="659" data-y="268"></circle>
+          <circle fill="white" stroke="none" r="93" transform="translate(728,275)" data-x="728" data-y="275"></circle>
         </g>
         <rect width="1280" height="900" fill="url(#owls-pattern)" mask="url(#burst-mask)"></rect>
         <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(23,130)">
@@ -217,6 +217,16 @@
             <rect id="white-rect" fill="#FFFFFF" x="441" y="-100" width="300" height="300"></rect>
             <circle id="js-left-button" fill="#9A0009" cx="189.5" cy="87.5" r="7.5" class="h-g"></circle>
           </g>
+        </g>
+        <g id="js-blow-paths" stroke="black">
+          <line x1="374" y1="318.559" x2="18.805" y2="63.364"></line>
+          <line x1="374" y1="318.559" x2="48.026" y2="642.584"></line>
+          <line x1="374" y1="318.559" x2="713.61" y2="660.767"></line>
+          <line x1="374" y1="318.559" x2="718.805" y2="71.805"></line>
+          <line x1="374" y1="318.559" x2="299.974" y2="63.364"></line>
+          <line x1="374" y1="318.559" x2="283.74" y2="660.767"></line>
+          <line x1="374" y1="318.559" x2="18.805" y2="219.857"></line>
+          <line x1="377.247" y1="318.559" x2="724" y2="489.662"></line>
         </g>
       </g>
       <g id="js-entire-caleydoscope" class="h-g">
@@ -318,26 +328,26 @@
       </g>
       <g id="js-svg" class="h-g">
         <g id="js-svg-circles" class="h-g">
-          <circle fill="white" stroke="" r="0" transform="translate(552,445)" data-x="552" data-y="445"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(296,742)" data-x="296" data-y="742"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(310,274)" data-x="310" data-y="274"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(619,222)" data-x="619" data-y="222"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(683,633)" data-x="683" data-y="633"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(332,64)" data-x="332" data-y="64"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(651,513)" data-x="651" data-y="513"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(768,556)" data-x="768" data-y="556"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(692,316)" data-x="692" data-y="316"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(297,219)" data-x="297" data-y="219"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(528,87)" data-x="528" data-y="87"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(316,193)" data-x="316" data-y="193"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(311,61)" data-x="311" data-y="61"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(303,413)" data-x="303" data-y="413"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(741,517)" data-x="741" data-y="517"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(281,277)" data-x="281" data-y="277"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(457,542)" data-x="457" data-y="542"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(268,258)" data-x="268" data-y="258"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(790,797)" data-x="790" data-y="797"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(435,702)" data-x="435" data-y="702"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(808,456)" data-x="808" data-y="456"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(657,186)" data-x="657" data-y="186"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(671,676)" data-x="671" data-y="676"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(477,830)" data-x="477" data-y="830"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(671,289)" data-x="671" data-y="289"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(637,82)" data-x="637" data-y="82"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(667,108)" data-x="667" data-y="108"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(316,601)" data-x="316" data-y="601"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(980,499)" data-x="980" data-y="499"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(994,98)" data-x="994" data-y="98"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(1024,777)" data-x="1024" data-y="777"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(762,76)" data-x="762" data-y="76"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(608,808)" data-x="608" data-y="808"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(516,117)" data-x="516" data-y="117"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(938,587)" data-x="938" data-y="587"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(356,803)" data-x="356" data-y="803"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(449,640)" data-x="449" data-y="640"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(874,273)" data-x="874" data-y="273"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(709,74)" data-x="709" data-y="74"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(870,806)" data-x="870" data-y="806"></circle>
         </g>
         <mask id="svg-s-mask">
           <g transform="translate(250,0)">
